@@ -1,10 +1,10 @@
 {
-  "count": 36,
+  "count": 34,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 12,
+      "count": 10,
       "uniques": 1
     },
     {
